# stm32-nucleo

./: .gitignore  Blinky.hs  Makefile  README  README.md  elf.mk  flake.nix  linker_script.ld  new-mk.mk  tz-drivers-elf.mk
CMSIS/: NOTE.md
HaskellApp/: CHANGELOG.md  Example.hs  ExampleNotes.hs  HaskellApp.cabal  LICENSE  NonSecure.hs  Secure.hs  Setup.hs  sec.c  stubs.c
HaskellApp/app/: ExampleWithPersistent.hs  HAL.hs  HW.hs  Hardware.hs  IxMonad.hs  Main.hs  NonSecure.hs  Secure.hs  Setup.hs  SimpleExample.hs
HaskellApp/app/Board/: Board.hs  Button.hs  LED.hs
HaskellApp/app/Control/Monad/: IxMonad.hs  State.hs
HaskellApp/app/Control/Monad/IO/: Class.hs
HaskellApp/app/Control/Monad/State/: Class.hs
HaskellApp/app/Drivers/: EXTI.hs  FLASH.hs  GPIO.hs  PWR.hs  RCC.hs  SysTick.hs  TZSC.hs  UART.hs
HaskellApp/app/Effectful/: HAL.hs  NonSecure.hs  Secure.hs
HaskellApp/app/Effectful/HAL/: Board.hs  GPIO.hs  RCC.hs  SysTick.hs  TZSC.hs
HaskellApp/app/Effectful/Internal/: NonSecure.hs  Secure.hs
HaskellApp/app/Effectful/TypeLevel/: List.hs  Number.hs
HaskellApp/app/Effectless/: NonSecure.hs  Secure.hs  Setup.hs
HaskellApp/app/Foreign/HAL/: Utils.hs
HaskellApp/app/HAL/Board/: Board.hs  Button.hs  LED.hs
HaskellApp/app/HAL/Drivers/: GPIO.hs
TZ-bootloader/NS/: ls-ns.ld
TZ-bootloader/S/: ls-s.ld
TZ-drivers-HasTEE/: Makefile
TZ-drivers-HasTEE/NS/: gen2.c  main.c  sg.h
TZ-drivers-HasTEE/S/: gen2.c  main.c
TZ-drivers-HasTEE/shared/: config.c  config.h
TZ-drivers-MicroHaskell/: Makefile
TZ-drivers-MicroHaskell/NS/: Nonsecure.hs  main.c
TZ-drivers-MicroHaskell/shared/: config.c  config.h  stubs.c
TZ-drivers-example/S/: main.c
TZ-drivers-example/shared/: breadboard.c
TZ/NS/: ls-ns.ld
TZ/S/: ls-s.ld
boards/: board.h
boards/nucleo_l552ze/: board.c
boards/stm32l5/: board.c
boards/stm32u5/: board.c
docs/: index.md
docs/concepts/: architecture.md  hal-secure-model.md  trustzone.md  vtable-backend-pattern.md
docs/getting-started/: 01-preparing-the-board.md  02-setup.md  03-build-and-flash.md  04-hello-world.md
docs/how-to/: button-interrupt.md  configure-clock.md  custom-gpio-pin.md  nonsecure-callable.md  trustzone-build.md
docs/reference/: board.md  exti.md  gpio.md  irq.md  library-design.md  pwr-flash.md  rcc.md  systick.md  trustzone.md  uart.md
examples/blink-and-button/: Makefile  README.md
examples/breadboard-buttons/: Makefile  README.md
examples/microhastee/: Makefile  README.md
examples/microhs-hello-tz/: Makefile  README.md
firmware/boards/: board.h
include/: clock.h  gpio.h  uart.h
main/: main.c
main-drivers/: main.c
mhs/: README.md
mhs/include/: config.h  config_stm32l5.h  extra.c
mhs/src/: eval.c  eval_stm32l5.c  gen.c
mk-drivers/: board.mk  bootloader.mk  drivers.mk  toolchain.mk
mk/TZ/: tz-bootloader.mk  tz-common.mk  tz.mk
mk/TZ-lib/: tz-lib.mk
mk/app/: main.mk  mhs.mk  new-mhs.mk
mk/apps/: main.mk
mk/common/: librobos.mk  platform.mk  toolchain.mk
new-mhs/: config.c  config.h  main.c
ns-main-drivers/: main.c
robos/: startup.c
robos/include/: button.h  clock.h  gpio.h  timer.h  uart.h
robos/src/: button.c  clock.c  gpio.c  startup.c  syscalls.c  timer.c  (+1 more)
src/: clock.c  gpio.c  main.c  startup.c  syscalls.c  uart.c  uart.h
(+216 files in other folders)
