cabal-version:      3.0
name:               HaskellApp
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Rewbert
maintainer:         krookr@chalmers.se
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

flag secure
    manual: True
    default: False

common warnings
    ghc-options: -Wall

executable HaskellApp.c
    import:           warnings
    main-is:          SimpleExample.hs
    other-modules:    Control.Monad.State.Class
                      Control.Monad.State
                      Control.Monad.IO.Class
                      Secure
                      NonSecure
                      Setup

    if(flag(secure))
        mhs-options: -DSECURE

    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
